10-27 update at home

--- a/templates/device/index/Equipment/index.html
+++ b/templates/device/index/Equipment/index.html
@@ -5,20 +5,20 @@
 <title>设备管理</title>
 <meta name="Keywords" content="设备管理" >
 <meta name="Description" content="设备管理" >
-<link href="../../public/static/css/style2/style.css" rel="stylesheet" type="text/css">
-<script src="../../public/static/js/jquery.min.js" type="text/javascript"></script>
-<script src="../../public/static/js/login.js" type="text/javascript"></script>
+<link href="/static/css/style2/style.css" rel="stylesheet" type="text/css">
+<script src="/static/js/jquery.min.js" type="text/javascript"></script>
+<script src="/static/js/login.js" type="text/javascript"></script>
 
 </head>
 <body>
 
     <div class="warp">
 		
-        <div class="ej_bt">设备管理<a href="javascript:history.back(-1)" class="fh"><img src="/public/static/images/fanhui.png" /></a><a href="http://ro.yueshuidz.com/index/Equipment/pclist.html?maxDeviceID=3999999&page=1" class="bx" style="color:#6d08ff">大屏展示</a></div>
+        <div class="ej_bt">设备管理<a href="javascript:history.back(-1)" class="fh"><img src="/static/images/fanhui.png" /></a><a href="http://ro.yueshuidz.com/index/Equipment/pclist.html?maxDeviceID=3999999&page=1" class="bx" style="color:#6d08ff">大屏展示</a></div>
          
          <div class="ej_cx">
              <div class="cx_l">设备列表（总量:6台；在线:0台；故障:0台）</div>
-             <div class="cx_r login-header"><a href="javascript:void(0);">查询<img src="/public/static/images/x.png" /></a></div>
+             <div class="cx_r login-header"><a href="javascript:void(0);">查询<img src="/static/images/x.png" /></a></div>
              <div class=" clear"></div>
          </div>
         
@@ -302,8 +302,8 @@
     </div><!--warp-->
     
 </body>
- <script src="../../public/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../../public/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
+ <script src="/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
     function power(status,id,title){
         layer.open({
