--- a/templates/device/index/index/index.html
+++ b/templates/device/index/index/index.html
@@ -5,8 +5,8 @@
 <title>首页-控制器</title>
 <meta name="Keywords" content="控制器" >
 <meta name="Description" content="控制器" >
-<link href=" ../../public/static/css/style2/style.css" rel="stylesheet" type="text/css">
-<script src=" ../../public/static/js/jquery.min.js" type="text/javascript"></script>
+<link href=" /static/css/style2/style.css" rel="stylesheet" type="text/css">
+<script src=" /static/js/jquery.min.js" type="text/javascript"></script>
 <script>
 settings.setDisplayZoomControls(ture);
 </script>
@@ -16,7 +16,7 @@ settings.setDisplayZoomControls(ture);
 
     <div class="warp">
 		
-        <h1><img src=" ../../public/static/images/h1.png"  width="100%"/></h1>
+        <h1><img src=" /static/images/h1.png"  width="100%"/></h1>
         
             
         
@@ -86,23 +86,23 @@ settings.setDisplayZoomControls(ture);
         <div class="main_one">
         	<ul>
             	<li><a href="/index/Equipment/index.html">
-                	<img src=" ../../public/static/images/li1.png" />
+                	<img src=" /static/images/li1.png" />
                     设备管理
                 </a></li>
             	<li><a href="/index/repairs/index.html">
-                	<img src=" ../../public/static/images/li2.png" />
+                	<img src=" /static/images/li2.png" />
                     报修管理
                 </a></li>
 				            	<li><a href="/index/remind/index.html">
-                	<img src=" ../../public/static/images/li3.png" />
+                	<img src=" /static/images/li3.png" />
                     售后管理
                 </a></li>
             	<li><a href="/index/fault/index.html">
-                	<img src=" ../../public/static/images/li4.png" />
+                	<img src=" /static/images/li4.png" />
                     故障管理
                 </a></li>
 				            	<li><a href="">
-                	<img src=" ../../public/static/images/li6.png" />
+                	<img src=" /static/images/li6.png" />
                     更多
                 </a></li>
                 <div class="clear"></div>
