--- a/templates/device/index/index/my.html
+++ b/templates/device/index/index/my.html
@@ -5,23 +5,23 @@
 <title>我的</title>
 <meta name="Keywords" content="" >
 <meta name="Description" content="" >
-<link href="../../public/static/css/style/style.css" rel="stylesheet" type="text/css">
+<link href="/static/css/style/style.css" rel="stylesheet" type="text/css">
 
 <style>
-body{ background:url(../../public/static/images/bg_bot.png) ;}
+body{ background:url(/static/images/bg_bot.png) ;}
 form .xgys {border-bottom: 0px solid #F0F0F0;}
 .queren{background-color: #47A0FC;}
 .wode {background:none; }
 .in_wid {margin-top: 20%;}
 .footerdb{ border-top:3px solid #47A0FC; background-color:#0C082D; position:fixed; bottom:0; width:100%;max-width:980px; padding-top:3%; padding-bottom:3%}
-.footerdb .list .tp1{ background:url(../../public/static/images/syh.png) no-repeat;}
-.footerdb .list .tp2{ background:url(../../public/static/images/gnh.png) no-repeat;}
-.footerdb .list .tp3{ background:url(../../public/static/images/wdh.png) no-repeat;}
+.footerdb .list .tp1{ background:url(/static/images/syh.png) no-repeat;}
+.footerdb .list .tp2{ background:url(/static/images/gnh.png) no-repeat;}
+.footerdb .list .tp3{ background:url(/static/images/wdh.png) no-repeat;}
 .footerdb .list a{color:#3F8FE1; }
 .tp4{ float:left; margin-top:10%; padding-left:2%}
-.tp1{ background:url(../../public/static/images/sy.png) no-repeat; margin:0 auto; width:60px; height:60px;  float:left}
-.tp2{ background:url(../../public/static/images/gn.png) no-repeat; margin:0 auto; width:60px; height:60px;  float:left}
-.tp3{ background:url(../../public/static/images/wd.png) no-repeat; margin:0 auto; width:60px; height:60px; float:left}
+.tp1{ background:url(/static/images/sy.png) no-repeat; margin:0 auto; width:60px; height:60px;  float:left}
+.tp2{ background:url(/static/images/gn.png) no-repeat; margin:0 auto; width:60px; height:60px;  float:left}
+.tp3{ background:url(/static/images/wd.png) no-repeat; margin:0 auto; width:60px; height:60px; float:left}
 .footerdb li{ width:33%; float:left; text-align:center; font-size:2em}
 .footerdb li img{ display:block; margin:0 auto; width:60px; margin-bottom:8%; }
 .footerdb li a{ color:#B8B8B8; font-size:1.6em;margin:0 auto; width:52%;display:block}
@@ -40,7 +40,7 @@ form .xgys {border-bottom: 0px solid #F0F0F0;}
         	
             
             <div class="wd_le">
-            	<div class="txtp"><img src="../../public/static/images/tx.jpg" /></div>
+            	<div class="txtp"><img src="/static/images/tx.jpg" /></div>
                 <div class="wd_wz">
 				                     <div class="wd_bt1">智跃测试</div>
 					                 </div>
