--- a/apps/device/static/css/style/style.css
+++ b/apps/device/static/css/style/style.css
@@ -53,15 +53,15 @@ a:hover { color:#4290E0;}
 .dibu{width:100%; background-color:#F0F0F0; height:150px; font-size:2.4em; text-align:center; color:#999999; line-height:150px;}
 
 /* .footer{ border-top:3px solid #DDDDDD; background-color:#fff; position:fixed; bottom:0; width:100%;max-width:980px; padding-top:3%; padding-bottom:2%} */
-/* .footer .list .tp1{ background:url(/public/static/images/syh.png) no-repeat;} */
-/* .footer .list .tp2{ background:url(/public/static/images/gnh.png) no-repeat;} */
-/* .footer .list .tp3{ background:url(/public/static/images/tjh.png) no-repeat;} */
-/* .footer .list .tp4{ background:url(/public/static/images/wdh.png) no-repeat;} */
+/* .footer .list .tp1{ background:url(/static/images/syh.png) no-repeat;} */
+/* .footer .list .tp2{ background:url(/static/images/gnh.png) no-repeat;} */
+/* .footer .list .tp3{ background:url(/static/images/tjh.png) no-repeat;} */
+/* .footer .list .tp4{ background:url(/static/images/wdh.png) no-repeat;} */
 /* .footer .list a{color:#389BFF} */
-/* .tp1{ background:url(/public/static/images/sy.png) no-repeat; margin:0 auto; width:60px; height:60px; margin-bottom:6%} */
-/* .tp2{ background:url(/public/static/images/gn.png) no-repeat; margin:0 auto; width:60px; height:60px; margin-bottom:6%} */
-/* .tp3{ background:url(/public/static/images/tj.png) no-repeat; margin:0 auto; width:60px; height:60px; margin-bottom:6%} */
-/* .tp4{ background:url(/public/static/images/wd.png) no-repeat; margin:0 auto; width:60px; height:60px; margin-bottom:6%} */
+/* .tp1{ background:url(/static/images/sy.png) no-repeat; margin:0 auto; width:60px; height:60px; margin-bottom:6%} */
+/* .tp2{ background:url(/static/images/gn.png) no-repeat; margin:0 auto; width:60px; height:60px; margin-bottom:6%} */
+/* .tp3{ background:url(/static/images/tj.png) no-repeat; margin:0 auto; width:60px; height:60px; margin-bottom:6%} */
+/* .tp4{ background:url(/static/images/wd.png) no-repeat; margin:0 auto; width:60px; height:60px; margin-bottom:6%} */
 /* .footer li{ width:25%; float:left; text-align:center; font-size:2em} */
 /* .footer li img{ display:block; margin:0 auto; width:60px; margin-bottom:8%} */
 /* .footer li a{ color:#BBBBBB} */
@@ -69,7 +69,7 @@ a:hover { color:#4290E0;}
 .top_xian{border-top:3px solid #F0F0F0; margin-top:5%}
 .quanbu{ margin-left:4%}
 
-.wode{ width:100%; background:url(/public/static/images/gezx.jpg); min-height:400px;}
+.wode{ width:100%; background:url(/static/images/gezx.jpg); min-height:400px;}
 .gezm{text-align:center; font-size:3em; padding-top:7%; padding-bottom:7%; color:#fff;}
 
 .wd_le{ width:70%; float:left; color:#FFF; padding-left:10%}
@@ -92,7 +92,7 @@ form .ysmm{ width:40%; float:left; text-align:right; color:#2D2D2D; font-size:2.
 .queren{ width:40%; height:104px;line-height:104px; cursor:pointer;display:block; background-color:#3EA1FF; border-radius:50px; font-size:2.4em; color:#fff; border:none; float:left; }
 .fanhui{ width:40%; height:104px;line-height:104px; cursor:pointer;display:block; background-color:#3EA1FF; border-radius:50px; font-size:2.4em; color:#fff; border:none; float:right; }
 
-.sjtj{ width:100%; background:url(/public/static/images/sjtj.jpg) no-repeat; padding-bottom:8%}
+.sjtj{ width:100%; background:url(/static/images/sjtj.jpg) no-repeat; padding-bottom:8%}
 .gezm{text-align:center; font-size:3em; padding-top:7%; padding-bottom:7%; color:#fff;}
 .sj{ color:#fff; }
 
@@ -125,7 +125,7 @@ form .ysmm{ width:40%; float:left; text-align:right; color:#2D2D2D; font-size:2.
 
 
 
-.mydiv { max-width:1000px;line-height:20px; background:url(/public/static/images/bb.png);font-size: 12px;z-index:999;width: 100%;height: 100%;left:0%;top:0%;margin-top:0px;position:fixed!important;/* FF IE7*/position:absolute;/*IE6*/transition:width 2s;
+.mydiv { max-width:1000px;line-height:20px; background:url(/static/images/bb.png);font-size: 12px;z-index:999;width: 100%;height: 100%;left:0%;top:0%;margin-top:0px;position:fixed!important;/* FF IE7*/position:absolute;/*IE6*/transition:width 2s;
 -moz-transition:width 2s; /* Firefox 4 */
 -webkit-transition:width 2s; /* Safari and Chrome */
 -o-transition:width 2s; /* Opera */}
