--- a/apps/device/static/css/style2/style.css
+++ b/apps/device/static/css/style2/style.css
@@ -9,7 +9,7 @@ a:hover { color:#4290E0;}
 .clear{ clear:both;}
 body{ background-color:#070922}
 
-.warp{ width:100%; margin:0 auto; overflow:hidden; min-width:480px; max-width:980px; background:url(/public/static/images/bg.jpg) ;position:relative}
+.warp{ width:100%; margin:0 auto; overflow:hidden; min-width:480px; max-width:980px; background:url(/static/images/bg.jpg) ;position:relative}
 h1{margin:0 auto;}
 
 .main_top{ width:95%; margin:0 auto; font-size:2.4em; margin-bottom:2%; margin-top:5%}
@@ -17,15 +17,15 @@ h1{margin:0 auto;}
 .color1{ color:#A2A2AA; float:left; width:28%}
 .color2{ color:#fff; float:left; text-align:center;  width:42%;}
 .color3{ color:#A2A2AA; float:right; width:30%; text-align:right}
-.ys{ background:url(/public/static/images/top1.png) no-repeat; color:#0036ff; font-size:2em; text-align:center; margin:0 auto; width:300px; height:126px; line-height:126px; margin-top:15%; margin-bottom:10%}
-.ys1{ background:url(/public/static/images/top1.png) no-repeat; color:#FF0000; font-size:2em; text-align:center; margin:0 auto; width:300px; height:126px; line-height:126px; margin-top:15%; margin-bottom:10%}
+.ys{ background:url(/static/images/top1.png) no-repeat; color:#0036ff; font-size:2em; text-align:center; margin:0 auto; width:300px; height:126px; line-height:126px; margin-top:15%; margin-bottom:10%}
+.ys1{ background:url(/static/images/top1.png) no-repeat; color:#FF0000; font-size:2em; text-align:center; margin:0 auto; width:300px; height:126px; line-height:126px; margin-top:15%; margin-bottom:10%}
 .yy{ color:#ADADB3; font-size:1em; text-align:center;  padding-top:6%}
 .barbox{height:16px;line-height:16px;overflow:hidden;}
 .barbox dt a{color:#0048CC;}
 .barbox dd{float:left;}
 .barbox dd.last{color:#999;}
-.barbox dd.barline{width:389px;background:url(/public/static/images/jdtbg.png) left center no-repeat;height:16px;overflow:hidden;display:inline;}
-.barbox dd.barline div.charts{height:16px;overflow:hidden;background:url(/public/static/images/jdtbg1.png) right center repeat-x;border-radius:8px;}
+.barbox dd.barline{width:389px;background:url(/static/images/jdtbg.png) left center no-repeat;height:16px;overflow:hidden;display:inline;}
+.barbox dd.barline div.charts{height:16px;overflow:hidden;background:url(/static/images/jdtbg1.png) right center repeat-x;border-radius:8px;}
 .votebox{ margin-top:20%; padding-bottom:5%}
 .main_right{ width:45%; float:right;background-color: rgba(131,131,131,0.2);border-radius:20px; padding:3%}
 .lv_xq{ font-size:1em; color:#ADADB3; margin-bottom:8%;padding-top: 3%;text-align:center; }
@@ -56,7 +56,7 @@ h1{margin:0 auto;}
 .cx_r{ width:13%; float:right; height:46px; background-color:#00D8FF;border-radius:20px;text-align:center; line-height:46px; font-size:1.6em; margin-right:7%}
 .cx_r a{ color:#fff; }
 .er_main{ width:90%; margin:0 auto}
-.er_1{ width:100%; background:url(/public/static/images/ej_bg.png) ;margin-top:7%; padding-bottom:4%}
+.er_1{ width:100%; background:url(/static/images/ej_bg.png) ;margin-top:7%; padding-bottom:4%}
 .er_main .er_gz{height:170px; }
 .er_main .er_gz .er_3{ width:98%; padding-top:5%}
 .er_1 dl{ padding-top:3%}
@@ -90,7 +90,7 @@ h1{margin:0 auto;}
 .for_ri{ width:84%; float:left; }
 .for_ri input{ width:70%; height:70px; line-height:70px; border:2px solid #999999;border-radius:20px; background-color:none; color:#fff; font-size:1.6em;background: 0 0; padding-left:5%}
 .fo_m{ margin-top:4%; width:90%; margin:0 auto; padding-top:5%}
-.shezhi{ width:85%; margin:0 auto; background:url(/public/static/images/shezhi.png) no-repeat; color:#fff; font-size:3em; border:none;border-radius:20px; height:98px; line-height:98px; margin:0 auto; display:block; margin-top:5%}
+.shezhi{ width:85%; margin:0 auto; background:url(/static/images/shezhi.png) no-repeat; color:#fff; font-size:3em; border:none;border-radius:20px; height:98px; line-height:98px; margin:0 auto; display:block; margin-top:5%}
 
 .fo_m1 .for_le{ width:6%; float:left; font-size:2.2em; color:#fff;line-height:70px; text-align:right}
 .fo_m1 .for_le img{ margin-top:38%}
@@ -106,14 +106,14 @@ h1{margin:0 auto;}
 .denglu{ width:85%; margin:0 auto; color:#fff; font-size:3em; border:none;border-radius:10px; height:98px; line-height:98px; margin:0 auto; display:block; margin-top:5%; background-color:#25C9FF; margin-bottom:10%}
 
 .footerdb{ border-top:3px solid #47A0FC; background-color:#0C082D; position:fixed; bottom:0; width:100%;max-width:980px; padding-top:3%; padding-bottom:3%}
-.footerdb .list .tp1{ background:url(/public/static/images/syh.png) no-repeat;}
-.footerdb .list .tp2{ background:url(/public/static/images/gnh.png) no-repeat;}
-.footerdb .list .tp3{ background:url(/public/static/images/wdh.png) no-repeat;}
+.footerdb .list .tp1{ background:url(/static/images/syh.png) no-repeat;}
+.footerdb .list .tp2{ background:url(/static/images/gnh.png) no-repeat;}
+.footerdb .list .tp3{ background:url(/static/images/wdh.png) no-repeat;}
 .footerdb .list a{color:#3F8FE1; }
 .tp4{ float:left; margin-top:10%; padding-left:2%}
-.tp1{ background:url(/public/static/images/sy.png) no-repeat; margin:0 auto; width:60px; height:60px;  float:left}
-.tp2{ background:url(/public/static/images/gn.png) no-repeat; margin:0 auto; width:60px; height:60px;  float:left}
-.tp3{ background:url(/public/static/images/wd.png) no-repeat; margin:0 auto; width:60px; height:60px; float:left}
+.tp1{ background:url(/static/images/sy.png) no-repeat; margin:0 auto; width:60px; height:60px;  float:left}
+.tp2{ background:url(/static/images/gn.png) no-repeat; margin:0 auto; width:60px; height:60px;  float:left}
+.tp3{ background:url(/static/images/wd.png) no-repeat; margin:0 auto; width:60px; height:60px; float:left}
 .footerdb li{ width:33%; float:left; text-align:center; font-size:2em}
 .footerdb li img{ display:block; margin:0 auto; width:60px; margin-bottom:8%; }
 .footerdb li a{ color:#B8B8B8; font-size:1.6em;margin:0 auto; width:52%;display:block}
@@ -145,7 +145,7 @@ h1{margin:0 auto;}
 
 .hfcc{ width:85%; margin:0 auto; padding-top:5%}
 .btn_recovery{background:#fff;border:none;border-radius:25px;color:#090925;font-size:2.8em;;line-height:70px; width:45%; float:left; margin-left:2%; margin-right:2%}
-.queding{ width:45%; float:left;background:url(/public/static/images/shezhi.png) no-repeat; color:#fff; font-size:2.8em; border:none;border-radius:20px; line-height:70px; margin-left:2%; margin-right:2%}
+.queding{ width:45%; float:left;background:url(/static/images/shezhi.png) no-repeat; color:#fff; font-size:2.8em; border:none;border-radius:20px; line-height:70px; margin-left:2%; margin-right:2%}
 
 .kgj{background-color: #EEE7F9;
     border-radius: 20px;
