--- a/templates/device/index/index/login.html
+++ b/templates/device/index/index/login.html
@@ -5,24 +5,24 @@
 <title>登录</title>
 <meta name="Keywords" content="登录" >
 <meta name="Description" content="登录" >
-<link href="../../public/static/css/style2/style.css" tppabs="../../public/static/css/style2/style.css" rel="stylesheet" type="text/css">
-<script src="../../public/static/js/jquery.min.js" tppabs="../../public/static/js/jquery.min.js" type="text/javascript"></script>
+<link href="/static/css/style2/style.css" tppabs="/static/css/style2/style.css" rel="stylesheet" type="text/css">
+<script src="/static/js/jquery.min.js" tppabs="/static/js/jquery.min.js" type="text/javascript"></script>
 
 </head>
 
-<body style=" background:url(../../public/static/images/loginbg.jpg) no-repeat #116DF4;background-size: cover;">
+<body style=" background:url(/static/images/loginbg.jpg) no-repeat #116DF4;background-size: cover;">
 
     <form id="h-form">
       <div class="dl"></div>
     
         <div class="dlym">
-            <div  class="for_le"><img src="../../public/static/images/dl1.png" tppabs="../../public/static/images/dl1.png" /></div>
+            <div  class="for_le"><img src="/static/images/dl1.png" tppabs="/static/images/dl1.png" /></div>
             <div class="for_ri"><input name="username" id="username" type="text" value="" onfocus="if (value ==''){value =''}" onblur="if (value ==''){value=''}" /></div>
             <div class="clear"></div>
         </div>
             
         <div class="dlym">
-            <div  class="for_le"><img src="../../public/static/images/dl2.png" tppabs="../../public/static/images/dl2.png" /></div>
+            <div  class="for_le"><img src="/static/images/dl2.png" tppabs="/static/images/dl2.png" /></div>
             <div class="for_ri"><input name="password" type="password" id="password"  value="" onfocus="if (value ==''){value =''}" onblur="if (value ==''){value=''}" /></div>
             <div class="clear"></div>
         </div>
@@ -32,9 +32,9 @@
     </form>
 
 </body>
-<script src="../../public/static/js/layer/mobile/layer.js" tppabs="../../public/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../public/static/js/mdialog.js" tppabs="../../public/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../public/static/js/mcommon.js" tppabs="../../public/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/layer/mobile/layer.js" tppabs="/static/js/layer/mobile/layer.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/mdialog.js" tppabs="/static/js/mdialog.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/js/mcommon.js" tppabs="/static/js/mcommon.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
 	    function checkSubmit()
 			{
