--- a/templates/device/index/index/my.html
+++ b/templates/device/index/index/my.html
@@ -71,8 +71,8 @@ form .xgys {border-bottom: 0px solid #F0F0F0;}
                 </div>
             -->
             <div class="in_wid">
-               <a href="../../index/index/logout.html"><div class="apply-form-btn queren"  style="display: block; text-align: center;">退出登录</div></a>
-			   <a href="../../index/user/changePwd.html"><div class="apply-form-btn fanhui"  style="display: block; text-align: center;">修改密码</div></a>
+               <a href="/index/index/logout.html"><div class="apply-form-btn queren"  style="display: block; text-align: center;">退出登录</div></a>
+			   <a href="/index/user/changePwd.html"><div class="apply-form-btn fanhui"  style="display: block; text-align: center;">修改密码</div></a>
 			   <!--<input name="dsubmit" type="submit" value="退出登录" class="apply-form-btn queren"></a>
                <input name="dsubmit1" type="submit" value="保存" class="apply-form-btn fanhui">-->
                <div class="clear"></div>
@@ -86,9 +86,9 @@ form .xgys {border-bottom: 0px solid #F0F0F0;}
         
   <div class="footerdb">
             <ul>
-                <li><a href="../../index/index/index.html"><div class="tp1"></div><div class="tp4">首页</div><div class="clear"></div></a> </li>
-                <li><a href="../../index/Equipment/index.html"><div class="tp2"></div><div class="tp4">设备</div><div class="clear"></div></a></li>
-                <li  class="list"><a href="../../index/index/my.html"><div class="tp3"></div><div class="tp4">我的</div><div class="clear"></div></a></li>
+                <li><a href="/index/index.html"><div class="tp1"></div><div class="tp4">首页</div><div class="clear"></div></a> </li>
+                <li><a href="/index/Equipment/index.html"><div class="tp2"></div><div class="tp4">设备</div><div class="clear"></div></a></li>
+                <li  class="list"><a href="/index/index/my.html"><div class="tp3"></div><div class="tp4">我的</div><div class="clear"></div></a></li>
                 <div class="clear"></div>
             </ul>
         </div>
