--- a/templates/device/index/Equipment/index.html
+++ b/templates/device/index/Equipment/index.html
@@ -7,6 +7,7 @@
 <meta name="Description" content="设备管理" >
 <link href="/static/css/style2/style.css" rel="stylesheet" type="text/css">
 <script src="/static/js/jquery.min.js" type="text/javascript"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.0/jquery.cookie.min.js"></script>
 <script src="/static/js/login.js" type="text/javascript"></script>
 
 </head>
@@ -293,9 +294,9 @@
 			
         <div class="footerdb">
             <ul>
-                <li><a href="../../index/index/index.html"><div class="tp1"></div><div class="tp4">首页</div><div class="clear"></div></a> </li>
-                <li class="list"><a href="../../index/Equipment/index.html"><div class="tp2"></div><div class="tp4">设备</div><div class="clear"></div></a></li>
-                <li><a href="../../index/index/my.html"><div class="tp3"></div><div class="tp4">我的</div><div class="clear"></div></a></li>
+                <li><a href="/index/index.html"><div class="tp1"></div><div class="tp4">首页</div><div class="clear"></div></a> </li>
+                <li class="list"><a href="/index/Equipment/index.html"><div class="tp2"></div><div class="tp4">设备</div><div class="clear"></div></a></li>
+                <li><a href="/index/index/my.html"><div class="tp3"></div><div class="tp4">我的</div><div class="clear"></div></a></li>
                 <div class="clear"></div>
             </ul>
         </div>
