--- a/templates/device/index/index/index.html
+++ b/templates/device/index/index/index.html
@@ -7,9 +7,10 @@
 <meta name="Description" content="控制器" >
 <link href=" /static/css/style2/style.css" rel="stylesheet" type="text/css">
 <script src=" /static/js/jquery.min.js" type="text/javascript"></script>
-<script>
-settings.setDisplayZoomControls(ture);
-</script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.0/jquery.cookie.min.js"></script>
+<!-- <script>
+// settings.setDisplayZoomControls(ture);
+</script> -->
 </head>
 
 <body>
@@ -108,24 +109,24 @@ settings.setDisplayZoomControls(ture);
                 <div class="clear"></div>
             </ul>
         </div>
-        <!--
-          <div class="main_two">
+        
+          <!-- <div class="main_two">
           	 <div class="wt">问题与技巧</div>
              <ul>
              	<li><a href="">【热卖】第三代远程主板操作说明</a></li>
              	<li><a href="">【热卖】液晶售水板</a></li>
              	<li><a href="">【热卖】数码管售水机主板</a></li>
              </ul>
-          </div>
-         -->
+          </div> -->
+        
             <div class="footer"><a href="#" onclick="a();">APP下载</a></div>
             
     
         <div class="footerdb">
             <ul>
-                <li class="list"><a href="../../index/index/index.html"><div class="tp1"></div><div class="tp4">首页</div><div class="clear"></div></a> </li>
-                <li><a href="../../index/Equipment/index.html"><div class="tp2"></div><div class="tp4">设备</div><div class="clear"></div></a></li>
-                <li><a href="../../index/index/my.html"><div class="tp3"></div><div class="tp4">我的</div><div class="clear"></div></a></li>
+                <li class="list"><a href="/index/index/index.html"><div class="tp1"></div><div class="tp4">首页</div><div class="clear"></div></a> </li>
+                <li><a href="/index/Equipment/index.html"><div class="tp2"></div><div class="tp4">设备</div><div class="clear"></div></a></li>
+                <li><a href="/index/index/my.html"><div class="tp3"></div><div class="tp4">我的</div><div class="clear"></div></a></li>
                 <div class="clear"></div>
             </ul>
         </div>
@@ -133,10 +134,13 @@ settings.setDisplayZoomControls(ture);
             
     </div><!--warp-->
     <script>
+        function a(){
+        window.location.href =  "http://ro.yueshuidz.com/智跃.apk";
+        }
 
-function a(){
-window.location.href =  "http://ro.yueshuidz.com/智跃.apk";
-}
-</script>
+        // $(function(){
+        //     console.log($.cookie('token'));
+        // }) ;
+    </script>
 </body>
 </html>
