--- a/templates/device/index/index/login.html
+++ b/templates/device/index/index/login.html
@@ -7,7 +7,7 @@
 <meta name="Description" content="登录" >
 <link href="/static/css/style2/style.css" tppabs="/static/css/style2/style.css" rel="stylesheet" type="text/css">
 <script src="/static/js/jquery.min.js" tppabs="/static/js/jquery.min.js" type="text/javascript"></script>
-
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.0/jquery.cookie.min.js"></script>
 </head>
 
 <body style=" background:url(/static/images/loginbg.jpg) no-repeat #116DF4;background-size: cover;">
@@ -40,22 +40,15 @@
 			{
 				$.ajax({
 					type:'POST',
-					url:"/index/index/doLogin",
+					url:"/jwt_auth/",
 					dataType:'JSON',
 					data:{username:$("#username").val(),password:$("#password").val()},
 					success:function(data){
-						if(data.status == 1){
-						
-						  window.location.href = data.url;
-						}else{
-							//失败
-							alert(data.message);
-							//dialog.error(data.message,data.url);
-							$("#hh-submit").attr("disabled",false);
-							return false;
+						$.cookie('token',data.token,{expires:7,path:'/',domain:'192.168.99.100'});
+						window.location.href = "/index/index.html/";
 						}
-					}
 				})
 			}
 	</script>
 </html>
+<!-- domain:'t.vgoule.com' -->
