--- a/templates/device/index/index/index.html
+++ b/templates/device/index/index/index.html
@@ -139,7 +139,18 @@
         }
 
         // $(function(){
-        //     console.log($.cookie('token'));
+        //     $.ajax({
+		// 			type:'GET',
+		// 			url:"/deviceQuery/",
+        //             cache: false,
+        //             beforeSend: function (XMLHttpRequest) {
+        //                 XMLHttpRequest.setRequestHeader("Authorization","JWT "+$.cookie('token'));
+        //             },
+		// 			success:function(data){
+		// 				console.log(data)
+		// 				}
+		// 		})
+
         // }) ;
     </script>
 </body>
